tests/ui/associated-inherent-types/regionck-0.stderr
error: lifetime may not live long enough
  --> $DIR/regionck-0.rs:11:12
   |
LL | fn user<'a>() {
   |         -- lifetime `'a` defined here
LL |     let _: S::<&'a ()>::T;
   |            ^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to previous error

